service.yaml
apiVersion: v1
kind: Service
metadata:
  name: boardgame-ssvc
  namespace: demoapp-dev
spec:
  selector:
    app: boardgame
  ports:
    - protocol: "TCP"
      port: 80
      targetPort: 8080
  type: ClusterIP # ClusterIP since Ingress handles external traffic
